Fri Jul  8 14:06:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Transport_Cache_Manager.h:
          Removed virtual from destructor, no need for this.

Fri Jul  8 15:32:36 2005  Boris Kolpackov  <boris@kolpackov.net>

	* orbsvcs/examples/Notify/Federation/Agent/Agent.cpp:
	* orbsvcs/examples/Notify/Federation/Gate/Gate.cpp:
	* orbsvcs/examples/Notify/Federation/SpaceCraft/SpaceCraft.cpp:

	  Changed all references to TAO_Notify_Service:init to read
	  init_service because somebody decided for some reason to
	  rename this function. Also made the code compilable by VC6.

Fri Jul  8 12:38:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/LocalObject.cpp:
          Removed some remarks about possible corba spec mismatch. Checked
          the latest corba spec and we throw the correct error

Fri Jul  8 12:20:47 2005  Simon McQueen  <sm@prismtech.com>

        * tests/Bug_2183_Regression/server.conf:

          Used the wrong comment character in this file.

Thu Jul  7 16:29:47 2005  Justin Michel  <michel_j@ociweb.com>

        * orbsvcs/orbsvcs/Notify/Buffering_Strategy.cpp:
        * orbsvcs/orbsvcs/Notify/ThreadPool_Task.cpp:

          Cleanup the output when enqueueing fails.

Thu Jul  7 15:39:54 2005  Justin Michel  <michel_j@ociweb.com>

        * orbsvcs/tests/Notify/performance-tests/RedGreen/RedGreen_Test.cpp:
        * orbsvcs/tests/Notify/performance-tests/RedGreen/listener.conf:
        * orbsvcs/tests/Notify/performance-tests/RedGreen/listener.conf.xml:
        * orbsvcs/tests/Notify/performance-tests/RedGreen/lookup.conf:
        * orbsvcs/tests/Notify/performance-tests/RedGreen/lookup.conf.xml:

          Fix test failure due to premature orb->shutdown().
          Update conf files to reflect changes in Notify options.

Thu Jul 07 12:46:22 2005   Gary Maxey <gary.maxey@hp.com>

        * TAO_IDL/fe/idl.ll
        * TAO_IDL/fe/lex.yy.cpp
        * TAO_IDL/fe/lex.yy.cpp.diff
