@@ -1,3 +1,12 @@
+Fri Jul  8 16:03:46 2005  Boris Kolpackov  <boris@kolpackov.net>
+
+	* orbsvcs/examples/Notify/Federation/Agent/Agent.cpp:
+	* orbsvcs/examples/Notify/Federation/Gate/Gate.cpp:
+	* orbsvcs/examples/Notify/Federation/Gate/Gate.h:
+	* orbsvcs/examples/Notify/Federation/SpaceCraft/SpaceCraft.cpp:
+
+	  Made the code compile on platforms with emulated exceptions.
+
 Fri Jul  8 14:06:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tao/Transport_Cache_Manager.h:
